--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -113,6 +113,16 @@ actions:
   permissions:
   - role: user
   comment: Generates an API key for a circle
+- name: linkDiscordUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/linkDiscordUser'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  comment: allow authenticated users to link a discord account to their profile
 - name: logoutUser
   definition:
     kind: synchronous
@@ -254,6 +264,7 @@ custom_types:
   - name: UploadOrgImageInput
   - name: CoordinapeInput
   - name: LogVaultTxInput
+  - name: LinkDiscordUserInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -412,6 +423,16 @@ custom_types:
         schema: public
         name: vault_transactions
       name: vault_tx_return_object
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: LinkDiscordUserResponse
+    relationships:
+    - remote_table:
+        schema: discord
+        name: users
+      name: linkDiscordUser_DiscordUser
       source: default
       type: object
       field_mapping:
